infra/k8s/posts copy.yaml
apiVersion: v1
kind: Pod
metadata:
    name: posts
spec:
    containers:
         - name: posts
           image: jesv/posts:0.0.1
