infra/k8s/blog-app-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
   name: blog-app-depl
spec:
   replicas: 1
   selector:
      matchLabels:
        app: blog-app
   template:
     metadata:
        labels:
          app: blog-app
     spec:
       containers:
          - name: blog-app
            image: 091994/blog-app:latest
---
apiVersion: v1
kind: Service
metadata:
   name: blog-app-srv 
spec:
  selector:
      app: blog-app
  ports:
    - name: blog-app
      protocol: TCP
      port: 3000
      targetPort: 3000
